--- a/paginas/detalle.html
+++ b/paginas/detalle.html
@@ -1,1 +1,73 @@
-<h1>Detalle</h1>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/resources/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/resources/css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>CAC-MOVIES</title>
+</head>
+
+<body>
+    <div class="container-fluid principal">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-danger header" style="background-color: #9F3647;">
+                <div class="container-fluid">
+                    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="/index.html"><span><i class="fas fa-film"
+                                aria-hidden="true"></i></span><span>CAC-MOVIES</span></a>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/index.html#seccion_tendencias">Tendencias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./registro.html">Registrarse</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link btn btn-dark" type="button" href="./login.html">Iniciar
+                                    Sesión</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+           
+        </main>
+
+        <!--Footer-->
+        <footer class="footer">
+
+            <nav class="navbar navbar-dark" style="background-color: #9F3647">
+
+                <a class="navbar-brand" href="#">Términos y condiciones</a>
+                <a class="navbar-brand" href="#">Preguntas Frecuentes</a>
+                <a class="navbar-brand" href="#">Ayuda</a>
+                <div class="btn-negro">
+                    <a class="navbar-brand btn btn-dark" href="#">Administrador Películas</a>
+                </div>
+
+            </nav>
+        </footer>
+
+    </div>
+
+</body>
+
+</html>
