--- a/paginas/detalle.html
+++ b/paginas/detalle.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/resources/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/resources/css/styles.css">
+    <link rel="shortcut icon" href="../resources/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../resources/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -27,12 +27,12 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="/index.html"><span><i class="fas fa-film"
+                    <a class="navbar-brand" href="../index.html"><span><i class="fas fa-film"
                                 aria-hidden="true"></i></span><span>CAC-MOVIES</span></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html#seccion_tendencias">Tendencias</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html#seccion_tendencias">Tendencias</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./registro.html">Registrarse</a>
