--- a/paginas/detalle.html
+++ b/paginas/detalle.html
@@ -68,11 +68,40 @@
 
            </section>
 
-           <section class="video">
-                <div>
-                    <h2 style="color:white">TRAILER</h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=RjNcTBXTk4I" frameborder="0"></iframe>
-                    
+           <section class="seccion_video">
+                <div class="container video">
+                    <div class="yt">
+                        <h2 style="color:white">TRAILER</h2>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/RjNcTBXTk4I" frameborder="0"></iframe>
+                        
+                    </div>
+                    <div class="informacion">
+                        <div class="redes">
+                            <ul>
+                                <li>
+                                    <a href="https://www.facebook.com/supermariomovie">
+                                        <i class="fab fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/supermariomovie">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/supermariomovie/">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.uphe.com/movies/the-super-mario-bros-movie">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
            </section>
         </main>
