--- a/paginas/detalle.html
+++ b/paginas/detalle.html
@@ -47,12 +47,12 @@
             </nav>
         </header>
 
-        <main>
+        <main class="container-fluid">
            <section class="fondo_detalle">
-            <div class="fondo">
+            <div class="fondo container-fluid">
                 <div class="poster">
                     <img src="../resources/img/detalles/mario.jpg" alt="">
-                    <div class="container">
+                    <div class="container-fluid">
                         <h1>The Super Mario Bros. Movie (2023)</h1>
                         <p>04/05/2023 • Animation, Family, Adventure, Fantasy, Comedy • 1h 33m</p>
                         <h3>Overview</h3>
@@ -69,13 +69,14 @@
            </section>
 
            <section class="seccion_video">
-                <div class="container video">
-                    <div class="yt">
-                        <h2 style="color:white">TRAILER</h2>
+                <div class="video container">
+                    <h2 style="color:white">TRAILER</h2>
+                    <div class="yt container">
+                       
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/RjNcTBXTk4I" frameborder="0"></iframe>
                         
                     </div>
-                    <div class="informacion">
+                    <div class="informacion container">
                         <div class="redes">
                             <ul>
                                 <li>
