--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -28,32 +28,32 @@
         </header>
         <main class="main-formulario">
             <div class="container formulario">
-                <form class="row g-3 needs-validation" novalidate>
+                <form class="row g-3 needs-validation" id="form-registro" novalidate>
                     <div class="col-md-6">
                         <h2>Registro</h2>
                     </div>
                                         
                     <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Nombre" required>                        
+                        <input type="text" class="form-control" id="nombre" placeholder="Nombre">                        
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Apellido" required>
+                        <input type="text" class="form-control" id="apellido" placeholder="Apellido">
                     </div>
                     <div class="col-md-6">
                         <div class="input-group has-validation">
                             <span class="input-group-text" id="inputGroupPrepend">@</span>
                             <input type="email" class="form-control" aria-describedby="inputGroupPrepend"
-                            placeholder="Email" required>
+                            id="email" placeholder="Email">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <input type="password" class="form-control"  placeholder="Contraseña" required>                        
+                        <input type="password" class="form-control" id="password" placeholder="Contraseña">                        
                     </div>
                     <div class="col-md-6">
-                        <input type="date" class="form-control" required>
+                        <input type="date" class="form-control" id="fechanac">
                     </div>
                     <div class="col-md-6">
-                        <select class="form-select" required>
+                        <select class="form-select" id="pais">
                             <option selected disabled value="">País</option>
                             <option value="1">Argentina</option>
                             <option value="2">Bolivia</option>
@@ -69,7 +69,7 @@
                     </div>                    
                     <div class="col-md-6">
                         <div class="form-check check">
-                            <input class="form-check-input" type="checkbox" value="" required>
+                            <input class="form-check-input" type="checkbox" value="" id="terminos">
                             <label class="form-check-label" for="invalidCheck">
                                 Acepto términos y condiciones
                             </label>                            
@@ -80,8 +80,10 @@
                         <a href="#">¿Necesita ayuda?</a>
                     </div>
                 </form>
+                <p id="error-message" class="error-message"></p>
             </div>
         </main>
     </div>
+    <script src="../resources/js/registro.js"></script>
 </body>
 </html>
