--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </footer>
     
     </div>
+    <script src="./resources/js/config.js"></script>
     <script src="./resources/js/funciones.js"></script>
     <script src="./resources/js/main.js"></script>
     
